Correct header spacing when year selector is gone

--- a/static-data/static/css/admin.css
+++ b/static-data/static/css/admin.css
@@ -42,7 +42,7 @@ div:focus {
 
 #inputArea h3 {
 	font-size: 1.5em;
-	margin: 0;
+	margin: 0 0 10px 0;
 	padding: 0;
 	line-height: 1em;
 	padding-top: 4px;
